--- a/arcane-2.css
+++ b/arcane-2.css
@@ -417,7 +417,8 @@ a:hover {
     position: relative;
 }
 .line-break#move{
-    margin-top: 0;
+    margin-top: -10px;
+    z-index: 10;
 }
 .line-break#move-2{
     margin-top: 2.3em;
@@ -501,7 +502,7 @@ a:hover {
 /* about */
 .about {
     height: 60vh;
-    margin: 0;
+    margin: -10px;
     z-index: 1;
     background-color: rgb(1, 10, 19);
 }
@@ -540,7 +541,7 @@ a:hover {
 
 /* Music */
 .music {
-    height: 85vh !important;
+    height: 90vh !important;
     width: 100vw;
     margin: 0;
     z-index: 1;
@@ -558,8 +559,16 @@ a:hover {
     .music .content .des{
         margin-bottom: -20px !important;
     }
-    
+    .spotify{
+        margin-top: -27em !important;
+    }
 }
+@media screen and (max-width: 790px){
+    .spotify{
+        margin-top: -25em !important;
+    }
+}
+
 .music .content {
     position: absolute;
     left: 5%;
