--- a/arcane-2.css
+++ b/arcane-2.css
@@ -751,7 +751,9 @@ a:hover {
 }
 
 @media only screen and (max-width: 300px) {
-    .prev, .next {font-size: 11px}
+    .prev, .next {
+        font-size: 11px
+    }
 }
 
 
